--- a/References/references.bib
+++ b/References/references.bib
@@ -2759,3 +2759,21 @@
   title   = {Modeling the expansion of virtual screening libraries},
   year    = {2023}
 }
+
+@article{Wong2022AF2Docking,
+  author  = {Wong, Felix and Krishnan, Aarti and Zheng, Erica J and St{\"a}rk, Hannes and Manson, Abigail L and Earl, Ashlee M and Jaakkola, Tommi and Collins, James J},
+  journal = {Molecular Systems Biology},
+  number  = {9},
+  pages   = {e11081},
+  title   = {Benchmarking AlphaFold-enabled molecular docking predictions for antibiotic discovery},
+  volume  = {18},
+  year    = {2022}
+}
+
+@inproceedings{corso2023diffdock,
+  title     = {DiffDock: Diffusion Steps, Twists, and Turns for Molecular Docking},
+  author    = {Gabriele Corso and Hannes St{\"a}rk and Bowen Jing and Regina Barzilay and Tommi S. Jaakkola},
+  booktitle = {The Eleventh International Conference on Learning Representations },
+  year      = {2023},
+  url       = {https://openreview.net/forum?id=kKF8_K-mBbS}
+}
