--- a/References/references.bib
+++ b/References/references.bib
@@ -2770,10 +2770,215 @@
   year    = {2022}
 }
 
+@inproceedings{Stark2022equibind,
+  title        = {Equibind: Geometric deep learning for drug binding structure prediction},
+  author       = {St{\"a}rk, Hannes and Ganea, Octavian and Pattanaik, Lagnajit and Barzilay, Regina and Jaakkola, Tommi},
+  booktitle    = {International Conference on Machine Learning},
+  pages        = {20503--20521},
+  year         = {2022},
+  organization = {PMLR}
+}
+
 @inproceedings{corso2023diffdock,
   title     = {DiffDock: Diffusion Steps, Twists, and Turns for Molecular Docking},
   author    = {Gabriele Corso and Hannes St{\"a}rk and Bowen Jing and Regina Barzilay and Tommi S. Jaakkola},
   booktitle = {The Eleventh International Conference on Learning Representations },
   year      = {2023},
   url       = {https://openreview.net/forum?id=kKF8_K-mBbS}
+}
+
+@article{meng2011molecular,
+  title     = {Molecular docking: a powerful approach for structure-based drug discovery},
+  author    = {Meng, Xuan-Yu and Zhang, Hong-Xing and Mezei, Mihaly and Cui, Meng},
+  journal   = {Current computer-aided drug design},
+  volume    = {7},
+  number    = {2},
+  pages     = {146--157},
+  year      = {2011},
+  publisher = {Bentham Science Publishers}
+}
+
+@article{friesner2004glide,
+  author  = {Friesner, Richard A. and Banks, Jay L. and Murphy, Robert B. and Halgren, Thomas A. and Klicic, Jasna J. and Mainz, Daniel T. and Repasky, Matthew P. and Knoll, Eric H. and Shelley, Mee and Perry, Jason K. and Shaw, David E. and Francis, Perry and Shenkin, Peter S.},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {7},
+  pages   = {1739-1749},
+  title   = {Glide: A New Approach for Rapid, Accurate Docking and Scoring. 1. Method and Assessment of Docking Accuracy},
+  volume  = {47},
+  year    = {2004}
+}
+
+@article{Verdonk2003Gold,
+  author  = {Verdonk, Marcel L. and Cole, Jason C. and Hartshorn, Michael J. and Murray, Christopher W. and Taylor, Richard D.},
+  journal = {Proteins: Structure, Function, and Bioinformatics},
+  number  = {4},
+  pages   = {609-623},
+  title   = {Improved protein--ligand docking using GOLD},
+  volume  = {52},
+  year    = {2003}
+}
+
+
+@article{Coleman2013DOCK,
+  author  = {Coleman, Ryan G. AND Carchia, Michael AND Sterling, Teague AND Irwin, John J. AND Shoichet, Brian K.},
+  journal = {PLOS ONE},
+  month   = {10},
+  number  = {10},
+  pages   = {1-19},
+  title   = {Ligand Pose and Orientational Sampling in Molecular Docking},
+  volume  = {8},
+  year    = {2013}
+}
+
+@article{McGann2012FRED,
+  author  = {McGann, Mark},
+  journal = {Journal of Computer-Aided Molecular Design},
+  number  = {8},
+  pages   = {897--906},
+  title   = {FRED and HYBRID docking performance on standardized datasets},
+  volume  = {26},
+  year    = {2012}
+}
+
+@article{Eberhardt2021Vina,
+  author  = {Eberhardt, Jerome and Santos-Martins, Diogo and Tillack, Andreas F. and Forli, Stefano},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {8},
+  pages   = {3891-3898},
+  title   = {AutoDock Vina 1.2.0: New Docking Methods, Expanded Force Field, and Python Bindings},
+  volume  = {61},
+  year    = {2021}
+}
+
+@article{Su2019CASF,
+  author  = {Su, Minyi and Yang, Qifan and Du, Yu and Feng, Guoqin and Liu, Zhihai and Li, Yan and Wang, Renxiao},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {2},
+  pages   = {895-913},
+  title   = {Comparative Assessment of Scoring Functions: The CASF-2016 Update},
+  volume  = {59},
+  year    = {2019}
+}
+
+
+@article{Liu2014PDBbind,
+  author  = {Liu, Zhihai and Li, Yan and Han, Li and Li, Jie and Liu, Jie and Zhao, Zhixiong and Nie, Wei and Liu, Yuchen and Wang, Renxiao},
+  journal = {Bioinformatics},
+  month   = {10},
+  number  = {3},
+  pages   = {405-412},
+  title   = {{PDB-wide collection of binding data: current status of the PDBbind database}},
+  volume  = {31},
+  year    = {2014}
+}
+
+@article{Bender2021LargeScaleDocking,
+  author  = {Bender, Brian J. and Gahbauer, Stefan and Luttens, Andreas and Lyu, Jiankun and Webb, Chase M. and Stein, Reed M. and Fink, Elissa A. and Balius, Trent E. and Carlsson, Jens and Irwin, John J. and Shoichet, Brian K.},
+  journal = {Nature Protocols},
+  number  = {10},
+  pages   = {4799--4832},
+  title   = {A practical guide to large-scale docking},
+  volume  = {16},
+  year    = {2021}
+}
+
+@article{Wang2004PDBbind,
+  author  = {Wang, Renxiao and Fang, Xueliang and Lu, Yipin and Wang, Shaomeng},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {12},
+  pages   = {2977-2980},
+  title   = {The PDBbind Database: Collection of Binding Affinities for Protein-Ligand Complexes with Known Three-Dimensional Structures},
+  volume  = {47},
+  year    = {2004}
+}
+
+@article{Mysinger2012DUDE,
+  author  = {Mysinger, Michael M. and Carchia, Michael and Irwin, John. J. and Shoichet, Brian K.},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {14},
+  pages   = {6582-6594},
+  title   = {Directory of Useful Decoys, Enhanced (DUD-E): Better Ligands and Decoys for Better Benchmarking},
+  volume  = {55},
+  year    = {2012}
+}
+
+@article{Li2019scoring,
+  author  = {Li, Jin and Fu, Ailing and Zhang, Le},
+  journal = {Interdisciplinary Sciences: Computational Life Sciences},
+  number  = {2},
+  pages   = {320--328},
+  title   = {An Overview of Scoring Functions Used for Protein--Ligand Interactions in Molecular Docking},
+  volume  = {11},
+  year    = {2019}
+}
+
+@article{Jumper2021AlphaFold,
+  author  = {Jumper, John and Evans, Richard and Pritzel, Alexander and Green, Tim and Figurnov, Michael and Ronneberger, Olaf and Tunyasuvunakool, Kathryn and Bates, Russ and {\v Z}{\'\i}dek, Augustin and Potapenko, Anna and Bridgland, Alex and Meyer, Clemens and Kohl, Simon A. A. and Ballard, Andrew J. and Cowie, Andrew and Romera-Paredes, Bernardino and Nikolov, Stanislav and Jain, Rishub and Adler, Jonas and Back, Trevor and Petersen, Stig and Reiman, David and Clancy, Ellen and Zielinski, Michal and Steinegger, Martin and Pacholska, Michalina and Berghammer, Tamas and Bodenstein, Sebastian and Silver, David and Vinyals, Oriol and Senior, Andrew W. and Kavukcuoglu, Koray and Kohli, Pushmeet and Hassabis, Demis},
+  journal = {Nature},
+  number  = {7873},
+  pages   = {583--589},
+  title   = {Highly accurate protein structure prediction with AlphaFold},
+  volume  = {596},
+  year    = {2021}
+}
+
+@article{Parks2020D3R,
+  author  = {Parks, Conor D. and Gaieb, Zied and Chiu, Michael and Yang, Huanwang and Shao, Chenghua and Walters, W. Patrick and Jansen, Johanna M. and McGaughey, Georgia and Lewis, Richard A. and Bembenek, Scott D. and Ameriks, Michael K. and Mirzadegan, Tara and Burley, Stephen K. and Amaro, Rommie E. and Gilson, Michael K.},
+  journal = {Journal of Computer-Aided Molecular Design},
+  number  = {2},
+  pages   = {99--119},
+  title   = {D3R grand challenge 4: blind prediction of protein--ligand poses, affinity rankings, and relative binding free energies},
+  volume  = {34},
+  year    = {2020}
+}
+
+@article{Huang2006DUD,
+  author  = {Huang, Niu and Shoichet, Brian K. and Irwin, John J.},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {23},
+  pages   = {6789-6801},
+  title   = {Benchmarking Sets for Molecular Docking},
+  volume  = {49},
+  year    = {2006}
+}
+
+@article{Kitchen2004Docking,
+  author  = {Kitchen, Douglas B. and Decornez, H{\'e}l{\`e}ne and Furr, John R. and Bajorath, J{\"u}rgen},
+  journal = {Nature Reviews Drug Discovery},
+  number  = {11},
+  pages   = {935--949},
+  title   = {Docking and scoring in virtual screening for drug discovery: methods and applications},
+  volume  = {3},
+  year    = {2004}
+}
+
+
+@article{Ballante2021DockingGPCR,
+  author  = {Ballante, Flavio and Kooistra, Albert J and Kampen, Stefanie and de Graaf, Chris and Carlsson, Jens},
+  journal = {Pharmacological Reviews},
+  number  = {4},
+  pages   = {1698--1736},
+  title   = {Structure-Based Virtual Screening for Ligands of G Protein{\textendash}Coupled Receptors: What Can Molecular Docking Do for You?},
+  volume  = {73},
+  year    = {2021}
+}
+
+@article{Erickson2004flexibility,
+  author  = {Erickson, Jon A. and Jalaie, Mehran and Robertson, Daniel H. and Lewis, Richard A. and Vieth, Michal},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {1},
+  pages   = {45-55},
+  title   = {Lessons in Molecular Recognition: The Effects of Ligand and Protein Flexibility on Molecular Docking Accuracy},
+  volume  = {47},
+  year    = {2004}
+}
+
+@article{Antunes2015flexibility,
+  author  = {Dinler A Antunes and Didier Devaurs and Lydia E Kavraki},
+  journal = {Expert Opinion on Drug Discovery},
+  number  = {12},
+  pages   = {1301-1313},
+  title   = {Understanding the challenges of protein flexibility in drug design},
+  volume  = {10},
+  year    = {2015}
 }
