--- a/References/references.bib
+++ b/References/references.bib
@@ -2982,3 +2982,62 @@
   volume  = {10},
   year    = {2015}
 }
+
+@article{Jorner2021ActiviationEnergiesGPR,
+  author  = {Jorner, Kjell and Brinck, Tore and Norrby, Per-Ola and Buttar, David},
+  journal = {Chem. Sci.},
+  pages   = {1163-1175},
+  title   = {Machine learning meets mechanistic modelling for accurate prediction of experimental activation energies},
+  volume  = {12},
+  year    = {2021}
+}
+
+@article{Wei2016reactionprediction,
+  author  = {Wei, Jennifer N. and Duvenaud, David and Aspuru-Guzik, Al{\'a}n},
+  journal = {ACS Central Science},
+  number  = {10},
+  pages   = {725-732},
+  title   = {Neural Networks for the Prediction of Organic Chemistry Reactions},
+  volume  = {2},
+  year    = {2016}
+}
+
+@article{Gentile2020deepdocking,
+  author  = {Gentile, Francesco and Agrawal, Vibudh and Hsing, Michael and Ton, Anh-Tien and Ban, Fuqiang and Norinder, Ulf and Gleave, Martin E. and Cherkasov, Artem},
+  journal = {ACS Central Science},
+  number  = {6},
+  pages   = {939-949},
+  title   = {Deep Docking: A Deep Learning Platform for Augmentation of Structure Based Drug Discovery},
+  volume  = {6},
+  year    = {2020}
+}
+
+@article{Ragoza2017ProteinCNN,
+  author  = {Ragoza, Matthew and Hochuli, Joshua and Idrobo, Elisa and Sunseri, Jocelyn and Koes, David Ryan},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {4},
+  pages   = {942-957},
+  title   = {Protein--Ligand Scoring with Convolutional Neural Networks},
+  volume  = {57},
+  year    = {2017}
+}
+
+@article{Jimenez2018Kdeep,
+  author  = {Jim{\'e}nez, Jos{\'e} and {\v S}kali{\v c}, Miha and Mart{\'\i}nez-Rosell, Gerard and De Fabritiis, Gianni},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {2},
+  pages   = {287-296},
+  title   = {KDEEP: Protein--Ligand Absolute Binding Affinity Prediction via 3D-Convolutional Neural Networks},
+  volume  = {58},
+  year    = {2018}
+}
+
+@article{Imrie2018ProteinCNN,
+  author  = {Imrie, Fergus and Bradley, Anthony R. and van der Schaar, Mihaela and Deane, Charlotte M.},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {11},
+  pages   = {2319-2330},
+  title   = {Protein Family-Specific Models Using Deep Neural Networks and Transfer Learning Improve Virtual Screening and Highlight the Need for More Data},
+  volume  = {58},
+  year    = {2018}
+}
