--- a/References/references.bib
+++ b/References/references.bib
@@ -3041,3 +3041,42 @@
   volume  = {58},
   year    = {2018}
 }
+
+@article{Jimenze2020XAI,
+  author  = {Jim{\'e}nez-Luna, Jos{\'e} and Grisoni, Francesca and Schneider, Gisbert},
+  journal = {Nature Machine Intelligence},
+  number  = {10},
+  pages   = {573--584},
+  title   = {Drug discovery with explainable artificial intelligence},
+  volume  = {2},
+  year    = {2020}
+}
+
+@article{Lapuschkin2019UnmaskingCleverHans,
+  author  = {Lapuschkin, Sebastian and W{\"a}ldchen, Stephan and Binder, Alexander and Montavon, Gr{\'e}goire and Samek, Wojciech and M{\"u}ller, Klaus-Robert},
+  journal = {Nature Communications},
+  number  = {1},
+  pages   = {1096},
+  title   = {Unmasking Clever Hans predictors and assessing what machines really learn},
+  volume  = {10},
+  year    = {2019}
+}
+
+@article{Griffiths2022photoswitches,
+  author  = {Griffiths, Ryan-Rhys and Greenfield, Jake L. and Thawani, Aditya R. and Jamasb, Arian R. and Moss, Henry B. and Bourached, Anthony and Jones, Penelope and McCorkindale, William and Aldrick, Alexander A. and Fuchter, Matthew J. and Lee, Alpha A.},
+  journal = {Chem. Sci.},
+  pages   = {13541-13551},
+  title   = {Data-driven discovery of molecular photoswitches with multioutput Gaussian processes},
+  volume  = {13},
+  year    = {2022}
+}
+
+@article{Merget2017KinaseInhibitors,
+  author  = {Merget, Benjamin and Turk, Samo and Eid, Sameh and Rippmann, Friedrich and Fulle, Simone},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {1},
+  pages   = {474-485},
+  title   = {Profiling Prediction of Kinase Inhibitors: Toward the Virtual Assay},
+  volume  = {60},
+  year    = {2017}
+}
