--- a/References/references.bib
+++ b/References/references.bib
@@ -3080,3 +3080,44 @@
   volume  = {60},
   year    = {2017}
 }
+
+@article{Swamidass2005kernels,
+  author  = {Swamidass, S. Joshua and Chen, Jonathan and Bruand, Jocelyne and Phung, Peter and Ralaivola, Liva and Baldi, Pierre},
+  journal = {Bioinformatics},
+  month   = {06},
+  number  = {suppl_1},
+  pages   = {i359-i368},
+  title   = {{Kernels for small molecules and the prediction of mutagenicity, toxicity and anti-cancer activity}},
+  volume  = {21},
+  year    = {2005}
+}
+
+@article{Svetnik2003RandomForest,
+  author  = {Svetnik, Vladimir and Liaw, Andy and Tong, Christopher and Culberson, J. Christopher and Sheridan, Robert P. and Feuston, Bradley P.},
+  journal = {Journal of Chemical Information and Computer Sciences},
+  number  = {6},
+  pages   = {1947-1958},
+  title   = {Random Forest: A Classification and Regression Tool for Compound Classification and QSAR Modeling},
+  volume  = {43},
+  year    = {2003}
+}
+
+@article{Polishchuk2009RandomForest,
+  author  = {Polishchuk, Pavel G. and Muratov, Eugene N. and Artemenko, Anatoly G. and Kolumbin, Oleg G. and Muratov, Nail N. and Kuz'min, Victor E.},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {11},
+  pages   = {2481-2488},
+  title   = {Application of Random Forest Approach to QSAR Prediction of Aquatic Toxicity},
+  volume  = {49},
+  year    = {2009}
+}
+
+@article{Palmer2007RandomForest,
+  author  = {Palmer, David S. and O'Boyle, Noel M. and Glen, Robert C. and Mitchell, John B. O.},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {1},
+  pages   = {150-158},
+  title   = {Random Forest Models To Predict Aqueous Solubility},
+  volume  = {47},
+  year    = {2007}
+}
