--- a/References/references.bib
+++ b/References/references.bib
@@ -3085,9 +3085,9 @@
   author  = {Swamidass, S. Joshua and Chen, Jonathan and Bruand, Jocelyne and Phung, Peter and Ralaivola, Liva and Baldi, Pierre},
   journal = {Bioinformatics},
   month   = {06},
-  number  = {suppl_1},
-  pages   = {i359-i368},
-  title   = {{Kernels for small molecules and the prediction of mutagenicity, toxicity and anti-cancer activity}},
+  number  = {suppl\_1},
+  pages   = {359-368},
+  title   = {Kernels for small molecules and the prediction of mutagenicity, toxicity and anti-cancer activity},
   volume  = {21},
   year    = {2005}
 }
@@ -3120,4 +3120,24 @@
   title   = {Random Forest Models To Predict Aqueous Solubility},
   volume  = {47},
   year    = {2007}
+}
+
+@article{Obrezanova2007GPQSAR,
+  author  = {Obrezanova, Olga and Cs{\'a}nyi, G{\'a}bor and Gola, Joelle M. R. and Segall, Matthew D.},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {5},
+  pages   = {1847-1857},
+  title   = {Gaussian Processes: A Method for Automatic QSAR Modeling of ADME Properties},
+  volume  = {47},
+  year    = {2007}
+}
+@misc{McCorkindale2020Soap,
+  doi       = {10.48550/ARXIV.2010.12857},
+  url       = {https://arxiv.org/abs/2010.12857},
+  author    = {McCorkindale, William and Poelking, Carl and Lee, Alpha A.},
+  keywords  = {Quantitative Methods (q-bio.QM), Machine Learning (cs.LG), Computational Physics (physics.comp-ph), FOS: Biological sciences, FOS: Biological sciences, FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Physical sciences, FOS: Physical sciences},
+  title     = {Investigating 3D Atomic Environments for Enhanced QSAR},
+  publisher = {arXiv},
+  year      = {2020},
+  copyright = {Creative Commons Attribution Non Commercial Share Alike 4.0 International}
 }
