--- a/References/references.bib
+++ b/References/references.bib
@@ -3141,3 +3141,257 @@
   year      = {2020},
   copyright = {Creative Commons Attribution Non Commercial Share Alike 4.0 International}
 }
+
+@book{Goodfellow2016DeepLearning,
+  title     = {Deep Learning},
+  author    = {Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+  publisher = {MIT Press},
+  note      = {\url{http://www.deeplearningbook.org}},
+  year      = {2016}
+}
+
+@book{Bishop2006PatternRecognition,
+  author    = {Bishop, Christopher M.},
+  title     = {Pattern Recognition and Machine Learning (Information Science and Statistics)},
+  year      = {2006},
+  isbn      = {0387310738},
+  publisher = {Springer-Verlag},
+  address   = {Berlin, Heidelberg}
+}}
+
+@article{Bender2021part1,
+  author  = {Andreas Bender and Isidro Cort{\'e}s-Ciriano},
+  journal = {Drug Discovery Today},
+  number  = {2},
+  pages   = {511-524},
+  title   = {Artificial intelligence in drug discovery: what is realistic, what are illusions? Part 1: Ways to make an impact, and why we are not there yet},
+  volume  = {26},
+  year    = {2021}
+}
+
+@article{Bender2021part2,
+  author  = {Andreas Bender and Isidro Cortes-Ciriano},
+  journal = {Drug Discovery Today},
+  number  = {4},
+  pages   = {1040-1052},
+  title   = {Artificial intelligence in drug discovery: what is realistic, what are illusions? Part 2: a discussion of chemical and biological data},
+  volume  = {26},
+  year    = {2021}
+}
+
+@article{Volkamer2023review,
+  author  = {Andrea Volkamer and Sereina Riniker and Eva Nittinger and Jessica Lanini and Francesca Grisoni and Emma Evertsson and Raquel Rodr{\'\i}guez-P{\'e}rez and Nadine Schneider},
+  journal = {Artificial Intelligence in the Life Sciences},
+  pages   = {100056},
+  title   = {Machine learning for small molecule drug discovery in academia and industry},
+  volume  = {3},
+  year    = {2023}
+}
+
+@article{Baydin2018autodiff,
+  author  = {Atilim Gunes Baydin and Barak A. Pearlmutter and Alexey Andreyevich Radul and Jeffrey Mark Siskind},
+  title   = {Automatic Differentiation in Machine Learning: a Survey},
+  journal = {Journal of Machine Learning Research},
+  year    = {2018},
+  volume  = {18},
+  number  = {153},
+  pages   = {1--43},
+  url     = {http://jmlr.org/papers/v18/17-468.html}
+}
+
+@article{Hofmann2008kernel,
+  author  = {Thomas Hofmann and Bernhard Sch{\"o}lkopf and Alexander J. Smola},
+  journal = {The Annals of Statistics},
+  number  = {3},
+  pages   = {1171 -- 1220},
+  title   = {{Kernel methods in machine learning}},
+  volume  = {36},
+  year    = {2008}
+}
+
+@article{Breiman2001RF,
+  author  = {Breiman, Leo},
+  journal = {Machine Learning},
+  number  = {1},
+  pages   = {5--32},
+  title   = {Random Forests},
+  volume  = {45},
+  year    = {2001}
+}
+
+@inproceedings{Cho2014RNN,
+  title     = {Learning Phrase Representations using {RNN} Encoder{--}Decoder for Statistical Machine Translation},
+  author    = {Cho, Kyunghyun  and
+               van Merri{\"e}nboer, Bart  and
+               Gulcehre, Caglar  and
+               Bahdanau, Dzmitry  and
+               Bougares, Fethi  and
+               Schwenk, Holger  and
+               Bengio, Yoshua},
+  booktitle = {Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing ({EMNLP})},
+  month     = oct,
+  year      = {2014},
+  address   = {Doha, Qatar},
+  publisher = {Association for Computational Linguistics},
+  url       = {https://aclanthology.org/D14-1179},
+  doi       = {10.3115/v1/D14-1179},
+  pages     = {1724--1734}
+}
+
+@misc{Chung2014GRU,
+  doi       = {10.48550/ARXIV.1412.3555},
+  url       = {https://arxiv.org/abs/1412.3555},
+  author    = {Chung, Junyoung and Gulcehre, Caglar and Cho, KyungHyun and Bengio, Yoshua},
+  keywords  = {Neural and Evolutionary Computing (cs.NE), Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {Empirical Evaluation of Gated Recurrent Neural Networks on Sequence Modeling},
+  publisher = {arXiv},
+  year      = {2014},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@misc{He2015ResNet,
+  doi       = {10.48550/ARXIV.1512.03385},
+  url       = {https://arxiv.org/abs/1512.03385},
+  author    = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  keywords  = {Computer Vision and Pattern Recognition (cs.CV), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {Deep Residual Learning for Image Recognition},
+  publisher = {arXiv},
+  year      = {2015},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@inproceedings{Krizhevsky2012AlexNet,
+  author    = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+  booktitle = {Advances in Neural Information Processing Systems},
+  editor    = {F. Pereira and C.J. Burges and L. Bottou and K.Q. Weinberger},
+  publisher = {Curran Associates, Inc.},
+  title     = {ImageNet Classification with Deep Convolutional Neural Networks},
+  volume    = {25},
+  year      = {2012}
+}
+
+@misc{Lipton2015RNN,
+  doi       = {10.48550/ARXIV.1506.00019},
+  url       = {https://arxiv.org/abs/1506.00019},
+  author    = {Lipton, Zachary C. and Berkowitz, John and Elkan, Charles},
+  keywords  = {Machine Learning (cs.LG), Neural and Evolutionary Computing (cs.NE), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {A Critical Review of Recurrent Neural Networks for Sequence Learning},
+  publisher = {arXiv},
+  year      = {2015},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{Srivastava2014dropout,
+  author  = {Nitish Srivastava and Geoffrey Hinton and Alex Krizhevsky and Ilya Sutskever and Ruslan Salakhutdinov},
+  title   = {Dropout: A Simple Way to Prevent Neural Networks from Overfitting},
+  journal = {Journal of Machine Learning Research},
+  year    = {2014},
+  volume  = {15},
+  number  = {56},
+  pages   = {1929--1958},
+  url     = {http://jmlr.org/papers/v15/srivastava14a.html}
+}
+
+@misc{Ioffe2015batchnorm,
+  doi       = {10.48550/ARXIV.1502.03167},
+  url       = {https://arxiv.org/abs/1502.03167},
+  author    = {Ioffe, Sergey and Szegedy, Christian},
+  keywords  = {Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift},
+  publisher = {arXiv},
+  year      = {2015},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@misc{Kingma2014Adam,
+  doi       = {10.48550/ARXIV.1412.6980},
+  url       = {https://arxiv.org/abs/1412.6980},
+  author    = {Kingma, Diederik P. and Ba, Jimmy},
+  keywords  = {Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {Adam: A Method for Stochastic Optimization},
+  publisher = {arXiv},
+  year      = {2014},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{Hochreiter1997LSTM,
+  author     = {Hochreiter, Sepp and Schmidhuber, J\"{u}rgen},
+  title      = {Long Short-Term Memory},
+  year       = {1997},
+  issue_date = {November 15, 1997},
+  publisher  = {MIT Press},
+  address    = {Cambridge, MA, USA},
+  volume     = {9},
+  number     = {8},
+  issn       = {0899-7667},
+  url        = {https://doi.org/10.1162/neco.1997.9.8.1735},
+  doi        = {10.1162/neco.1997.9.8.1735},
+  abstract   = {Learning to store information over extended time intervals by recurrent backpropagation takes a very long time, mostly because of insufficient, decaying error backflow. We briefly review Hochreiter's (1991) analysis of this problem, then address it by introducing a novel, efficient, gradient based method called long short-term memory (LSTM). Truncating the gradient where this does not do harm, LSTM can learn to bridge minimal time lags in excess of 1000 discrete-time steps by enforcing constant error flow through constant error carousels within special units. Multiplicative gate units learn to open and close access to the constant error flow. LSTM is local in space and time; its computational complexity per time step and weight is O. 1. Our experiments with artificial data involve local, distributed, real-valued, and noisy pattern representations. In comparisons with real-time recurrent learning, back propagation through time, recurrent cascade correlation, Elman nets, and neural sequence chunking, LSTM leads to many more successful runs, and learns much faster. LSTM also solves complex, artificial long-time-lag tasks that have never been solved by previous recurrent network algorithms.},
+  journal    = {Neural Comput.},
+  month      = {nov},
+  pages      = {1735-1780},
+  numpages   = {46}
+}
+
+@misc{Schneider2019wav2vec,
+  doi       = {10.48550/ARXIV.1904.05862},
+  url       = {https://arxiv.org/abs/1904.05862},
+  author    = {Schneider, Steffen and Baevski, Alexei and Collobert, Ronan and Auli, Michael},
+  keywords  = {Computation and Language (cs.CL), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {wav2vec: Unsupervised Pre-training for Speech Recognition},
+  publisher = {arXiv},
+  year      = {2019},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@misc{Wang2020CLIP,
+  doi       = {10.48550/ARXIV.2204.06125},
+  url       = {https://arxiv.org/abs/2204.06125},
+  author    = {Ramesh, Aditya and Dhariwal, Prafulla and Nichol, Alex and Chu, Casey and Chen, Mark},
+  keywords  = {Computer Vision and Pattern Recognition (cs.CV), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {Hierarchical Text-Conditional Image Generation with CLIP Latents},
+  publisher = {arXiv},
+  year      = {2022},
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@misc{OpenAI2021GPT3,
+  doi       = {10.48550/ARXIV.2005.14165},
+  url       = {https://arxiv.org/abs/2005.14165},
+  author    = {Brown, Tom B. and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and Agarwal, Sandhini and Herbert-Voss, Ariel and Krueger, Gretchen and Henighan, Tom and Child, Rewon and Ramesh, Aditya and Ziegler, Daniel M. and Wu, Jeffrey and Winter, Clemens and Hesse, Christopher and Chen, Mark and Sigler, Eric and Litwin, Mateusz and Gray, Scott and Chess, Benjamin and Clark, Jack and Berner, Christopher and McCandlish, Sam and Radford, Alec and Sutskever, Ilya and Amodei, Dario},
+  keywords  = {Computation and Language (cs.CL), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {Language Models are Few-Shot Learners},
+  publisher = {arXiv},
+  year      = {2020},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{Sapoval2022Bioinformatics,
+  author  = {Sapoval, Nicolae and Aghazadeh, Amirali and Nute, Michael G. and Antunes, Dinler A. and Balaji, Advait and Baraniuk, Richard and Barberan, C. J. and Dannenfelser, Ruth and Dun, Chen and Edrisi, Mohammadamin and Elworth, R. A. Leo and Kille, Bryce and Kyrillidis, Anastasios and Nakhleh, Luay and Wolfe, Cameron R. and Yan, Zhi and Yao, Vicky and Treangen, Todd J.},
+  journal = {Nature Communications},
+  number  = {1},
+  pages   = {1728},
+  title   = {Current progress and open challenges for applying deep learning across the biosciences},
+  volume  = {13},
+  year    = {2022}
+}
+
+@article{Sheridan2013TimeSplit,
+  author  = {Sheridan, Robert P.},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {4},
+  pages   = {783-790},
+  title   = {Time-Split Cross-Validation as a Method for Estimating the Goodness of Prospective Prediction.},
+  volume  = {53},
+  year    = {2013}
+}
+
+@article{Jiang2021benchmark,
+  author  = {Jiang, Dejun and Wu, Zhenxing and Hsieh, Chang-Yu and Chen, Guangyong and Liao, Ben and Wang, Zhe and Shen, Chao and Cao, Dongsheng and Wu, Jian and Hou, Tingjun},
+  journal = {Journal of Cheminformatics},
+  number  = {1},
+  pages   = {12},
+  title   = {Could graph neural networks learn better molecular representation for drug discovery? A comparison study of descriptor-based and graph-based models},
+  volume  = {13},
+  year    = {2021}
+}
