--- a/References/references.bib
+++ b/References/references.bib
@@ -1422,12 +1422,17 @@
   bdsk-url-1    = {https://doi.org/10.1038/s41586-020-2117-z}
 }
 
- @misc{ChemSpace,
+@misc{ChemSpace,
   title   = {Chemspace: Lead-like compounds},
   url     = {https://chem-space.com/compounds/lead-like-compounds},
   journal = {Lead-Like compounds | Chemspace}
 } 
 
+@misc{SMARTS,
+  title   = {SMARTS - A Language for Describing Molecular Patterns},
+  url     = {https://www.daylight.com/dayhtml/doc/theory/theory.smarts.html},
+  journal = {Daylight Chemical Information Systems}
+} 
 
 @article{Baell2010Pains,
   author     = {Baell, Jonathan B. and Holloway, Georgina A.},
