added figure for docking

--- a/References/references.bib
+++ b/References/references.bib
@@ -3400,3 +3400,13 @@
   volume  = {13},
   year    = {2021}
 }
+
+@article{delauney2004esol,
+  author  = {Delaney, John S.},
+  journal = {Journal of Chemical Information and Computer Sciences},
+  number  = {3},
+  pages   = {1000-1005},
+  title   = {ESOL: Estimating Aqueous Solubility Directly from Molecular Structure},
+  volume  = {44},
+  year    = {2004}
+}
