--- a/References/references.bib
+++ b/References/references.bib
@@ -3410,3 +3410,52 @@
   volume  = {44},
   year    = {2004}
 }
+
+
+@article{Vuorinen2015pharmacophore,
+  author  = {Anna Vuorinen and Daniela Schuster},
+  journal = {Methods},
+  pages   = {113-134},
+  title   = {Methods for generating and applying pharmacophore models as virtual screening filters and for bioactivity profiling},
+  volume  = {71},
+  year    = {2015}
+}
+
+@article{Temml2014pharmacophore,
+  author  = {Temml, Veronika and Voss, Constance V. and Dirsch, Verena M. and Schuster, Daniela},
+  journal = {Journal of Chemical Information and Modeling},
+  month   = {02},
+  number  = {2},
+  pages   = {367--371},
+  title   = {Discovery of New Liver X Receptor Agonists by Pharmacophore Modeling and Shape-Based Virtual Screening},
+  volume  = {54},
+  year    = {2014}
+}
+
+@article{Pal2019pharmacophore,
+  author  = {Sourav Pal and Vinay Kumar and Biswajit Kundu and Debomita Bhattacharya and Nagothy Preethy and Mamindla Prashanth Reddy and Arindam Talukdar},
+  journal = {Computational and Structural Biotechnology Journal},
+  pages   = {291-310},
+  title   = {Ligand-based Pharmacophore Modeling, Virtual Screening and Molecular Docking Studies for Discovery of Potential Topoisomerase I Inhibitors},
+  volume  = {17},
+  year    = {2019}
+}
+@article{Pradeepkiran2019pharmacophore,
+  author  = {Jangampalli Adi Pradeepkiran and Arubala P. Reddy and P. Hemachandra Reddy},
+  journal = {Drug Discovery Today},
+  number  = {2},
+  pages   = {616-623},
+  title   = {Pharmacophore-based models for therapeutic drugs against phosphorylated tau in Alzheimer's disease},
+  volume  = {24},
+  year    = {2019}
+}
+
+@article{Dixon2006pharmacophore,
+  author  = {Dixon, Steven L. and Smondyrev, Alexander M. and Rao, Shashidhar N.},
+  journal = {Chemical Biology \& Drug Design},
+  number  = {5},
+  pages   = {370-372},
+  title   = {PHASE: A Novel Approach to Pharmacophore Modeling and 3D Database Searching},
+  volume  = {67},
+  year    = {2006}
+}
