--- a/References/references.bib
+++ b/References/references.bib
@@ -3459,3 +3459,33 @@
   volume  = {67},
   year    = {2006}
 }
+
+@article{Walters2019libraries,
+  author  = {Walters, W. Patrick},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {3},
+  pages   = {1116-1124},
+  title   = {Virtual Chemical Libraries},
+  volume  = {62},
+  year    = {2019}
+}
+
+@article{Irwin2020Zinc,
+  author  = {Irwin, John J. and Tang, Khanh G. and Young, Jennifer and Dandarchuluun, Chinzorig and Wong, Benjamin R. and Khurelbaatar, Munkhzul and Moroz, Yurii S. and Mayfield, John and Sayle, Roger A.},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {12},
+  pages   = {6065-6073},
+  title   = {ZINC20---A Free Ultralarge-Scale Chemical Database for Ligand Discovery},
+  volume  = {60},
+  year    = {2020}
+}
+
+@article{SaldivarGonzalez2020enumeration,
+  author  = {Sald{\'\i}var-Gonz{\'a}lez, Fernanda I. and Huerta-Garc{\'\i}a, C. Sebastian and Medina-Franco, Jos{\'e}L.},
+  journal = {Journal of Cheminformatics},
+  number  = {1},
+  pages   = {64},
+  title   = {Chemoinformatics-based enumeration of chemical libraries: a tutorial},
+  volume  = {12},
+  year    = {2020}
+}
