--- a/References/references.bib
+++ b/References/references.bib
@@ -2057,21 +2057,10 @@
   journal = {Science},
   number  = {6614},
   pages   = {eabn7065},
-  title   = {Structure-based discovery of nonopioid analgesics acting through the $$\alpha_{2A}$$-adrenergic receptor},
+  title   = {Structure-based discovery of nonopioid analgesics acting through the $\alpha_{2A}$-adrenergic receptor},
   volume  = {377},
   year    = {2022}
 }
-
-@article{Lyu2019ultra,
-  author  = {Lyu, Jiankun and Wang, Sheng and Balius, Trent E. and Singh, Isha and Levit, Anat and Moroz, Yurii S. and O'Meara, Matthew J. and Che, Tao and Algaa, Enkhjargal and Tolmachova, Kateryna and Tolmachev, Andrey A. and Shoichet, Brian K. and Roth, Bryan L. and Irwin, John J.},
-  journal = {Nature},
-  number  = {7743},
-  pages   = {224--229},
-  title   = {Ultra-large library docking for discovering new chemotypes},
-  volume  = {566},
-  year    = {2019}
-}
-
 
 @article{Kearnes2021Prospective,
   author  = {Steven Kearnes},
@@ -3488,4 +3477,12 @@
   title   = {Chemoinformatics-based enumeration of chemical libraries: a tutorial},
   volume  = {12},
   year    = {2020}
+}
+@online{roccurve,
+  author  = {Wikimedia Commons},
+  title   = {Receiver Operating Characteristic (ROC) curve},
+  year    = {2018},
+  urlseen = {07-03-22},
+  url     = {https://commons.wikimedia.org/wiki/File:Roc_curve.svg},
+  note    = {\url{https://commons.wikimedia.org/wiki/File:Roc_curve.svg}}
 }
