--- a/Dedication/dedication.tex
+++ b/Dedication/dedication.tex
@@ -4,6 +4,14 @@
 
 I would like to dedicate this thesis to my loving parents \dots
 
+First and foremost, I would like to sincerely thank my advisor Alpha Lee for his help, guidance and for the freedom I was granted throughout these years.
+
+In alphabetical order, I would also like to thank my colleagues who \dots: Dávid, Emma, Felix,  Janosh, Kadi, Penny, Rokas, Rhys.
+
+David, Michelle, Brian. Gates scholars. CUHKPGSA?
+
+I would finally like to warmly thank my dear housemates Dávid and Eszti for their help in moments of doubt.
+
 WM acknowledges the support of the Gates Cambridge Trust.
 
 \end{dedication}
